src/test/resources/org/korren/test/jlox/samples/errors/super_without_method.lox
print super; // Error: "[line 1] Error at ';': Expect '.' after 'super'."
